<change> toList >> collect(Collectors.toList())